--- a/ELA/style.css
+++ b/ELA/style.css
@@ -1,35 +1,72 @@
 #vitap-image {
     width: 300px;
     height: 100px;
-    display: inline-block;
+    display: block;
+    float: left;
+    padding: 10px;
 }
 
-.header-bar>a{
-    color: green;
-    text-decoration-line: none;
+.header{
+    background-color: #f1f1f1;
+    text-align: center;
+    padding: 20px;
 }
-#vitap-image {
-    width: 300px;
-    height: 100px;
+
+.topnav{
+    overflow: hidden;
+    background-color: #333;
 }
+
+.topnav a{
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.topnav a:hover{
+    background-color: #ddd;
+    color: black;
+}
+
+.notifications{
+    background-color: rgb(214, 214, 214);
+}
+
+.column-main {
+    float: left;
+    width: 75%;
+}
+
+.column-notif {
+    float: left;
+    width: 25%;
+}
+
+.row::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
 .faculty-table {
     margin-left: auto;
     margin-right: auto;
 }
+
 .faculty-images{
     width: 75px;
     height: 100px;
 }
-.header-bar>a{
-    color: green;
-    text-decoration-line: none;
-}
+
 table, th, td {
     border: 1px solid black;
 }
+
 .footer{
-    width: 100%;
-    bottom: 0;
-    position: absolute;
     text-align: center;
+    background-color: #5d886d;
+    padding: 10px;
 }
